--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,3 +47,10 @@ background-repeat:no-repeat;
     height: 300px;
     
 }
+.card .card-image .card-title{
+    font-weight: 600;
+}
+
+.card .card-image img {
+    height: 400px;
+}
